--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta name="description" content="TinyUtils - A collection of useful web tools including Timestamp Converter, Date Formatter, HTML to PDF Converter, Duplicate Checker, and List Comparator." />
+    <meta name="keywords" content="timestamp converter, date formatter, html to pdf, duplicate checker, list comparator, web tools, utilities" />
+    <meta name="author" content="TinyUtils" />
+    <meta property="og:title" content="TinyUtils - Web Tools Collection" />
+    <meta property="og:description" content="A collection of useful web tools including Timestamp Converter, Date Formatter, HTML to PDF Converter, Duplicate Checker, and List Comparator." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://tinyutils.com" />
+    <title>TinyUtils - Web Tools Collection</title>
   </head>
   <body>
     <div id="root"></div>
